--- a/exercises/ispitni/Задача 3/Resample_Dates.ipynb
+++ b/exercises/ispitni/Задача 3/Resample_Dates.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 5,
    "id": "4829c545-c030-452a-9621-2a3902c7c4ea",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "[52416 rows x 6 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 6,
    "id": "35c4d607-0cb7-47f2-b2d1-d01240cf377b",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 8,
    "id": "4ef14396-4ec4-463c-9eca-edb6045407b3",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "[52416 rows x 6 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 9,
    "id": "a89ae03d-db0d-4810-a23c-4f37361d73c3",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 11,
    "id": "1f83f072-60ed-484b-bab5-abc9afc06b4b",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,7 @@
        "[52416 rows x 6 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 12,
    "id": "853c83d8-2bf5-4dbc-a830-c5c094682dc7",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 14,
    "id": "775b8527-26b9-407d-907e-e46c8154d0af",
    "metadata": {},
    "outputs": [
@@ -823,7 +823,7 @@
        "[52416 rows x 5 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 15,
    "id": "9e920a93-065b-46e4-8565-4472f2f032ea",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 17,
    "id": "4e200def-5688-4bcb-8306-74b9cd1dc52f",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1035,7 @@
        "[4368 rows x 5 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 18,
    "id": "498518d5-29b2-48e4-87c1-3b5d9e5b4af4",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 20,
    "id": "b1ef4d7e-0e3e-4387-88f2-2bb181be83af",
    "metadata": {},
    "outputs": [
@@ -1247,7 +1247,7 @@
        "[4368 rows x 5 columns]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 21,
    "id": "241edd6a-166c-4eb7-abaa-1609ed99d857",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1274,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,6 +1282,55 @@
    "source": [
     "df.isnull().sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "48a1e7bd-4704-4e33-92f0-7512c9a988cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({'WeekNr': range(101)}) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "00ff933e-6351-4b64-8f42-4ea1339f3dd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m startdate \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mTimeStamp(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2024-01-01\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m start_date \u001b[38;5;241m+\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_timedelta(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWeekNr\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m7\u001b[39m, unit\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mD\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "new_col = pd.TimeStamp(\"2024-01-01\")\n",
+    "\n",
+    "df['Date'] = start_date + pd.to_timedelta(df[\"\"])\n",
+    "\n",
+    "\n",
+    "startdate = df.TimeStamp('2024-01-01')\n",
+    "\n",
+    "df['Date'] = start_date + pd.to_timedelta(df['WeekNr']*7, unit=\"D\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c9ef3c4-11dd-462a-9d04-a7a2f30e7175",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
